Change command to Flutter Stylizer

--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:extension.sayHello"
+        "onCommand:extension.flutterStylizer"
     ],
     "main": "./out/extension",
     "contributes": {
         "commands": [
             {
-                "command": "extension.sayHello",
-                "title": "Hello World"
+                "command": "extension.flutterStylizer",
+                "title": "Flutter Stylizer"
             }
         ]
     },
