--- a/package.json
+++ b/package.json
@@ -1,43 +1,49 @@
 {
-    "name": "flutter-stylizer",
-    "displayName": "flutter-stylizer",
-    "description": "Flutter Stylizer organizes your Flutter classes in an opinionated and consistent manner.",
-    "version": "0.0.12",
-    "publisher": "gmlewis-vscode",
-    "repository": "https://github.com/gmlewis/flutter-stylizer",
-    "engines": {
-        "vscode": "^1.28.0"
-    },
-    "categories": [
-        "Other"
-    ],
-    "activationEvents": [
-        "onCommand:extension.flutterStylizer"
-    ],
-    "main": "./out/extension",
-    "contributes": {
-        "commands": [
-            {
-                "command": "extension.flutterStylizer",
-                "title": "Flutter Stylizer"
-            }
-        ]
-    },
-    "scripts": {
-        "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
-    },
-    "devDependencies": {
-        "@types/mocha": "^2.2.42",
-        "@types/node": "^8.10.25",
-        "tslint": "^5.8.0",
-        "typescript": "^2.9.2",
-        "vscode": "^1.1.26"
-    },
-    "dependencies": {
-        "ts-node": "^7.0.1"
-    }
+  "name": "flutter-stylizer",
+  "displayName": "flutter-stylizer",
+  "description": "Flutter Stylizer organizes your Flutter classes in an opinionated and consistent manner.",
+  "version": "0.0.12",
+  "publisher": "gmlewis-vscode",
+  "repository": "https://github.com/gmlewis/flutter-stylizer",
+  "engines": {
+    "vscode": "^1.28.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onCommand:extension.flutterStylizer",
+    "onLanguage:dart"
+  ],
+  "main": "./out/extension",
+  "contributes": {
+    "commands": [
+      {
+        "command": "extension.flutterStylizer",
+        "title": "Flutter Stylizer"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "postinstall": "node ./node_modules/vscode/bin/install",
+    "test": "npm run compile && node ./node_modules/vscode/bin/test"
+  },
+  "devDependencies": {
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^8.10.25",
+    "@types/sinon": "^7.0.13",
+    "sinon": "^7.3.2",
+    "tslint": "^5.8.0",
+    "typescript": "^2.9.2",
+    "vscode": "^1.1.26"
+  },
+  "dependencies": {
+    "ts-node": "^7.0.1"
+  },
+  "extensionDependency": [
+    "dart-code.dart-code"
+  ]
 }
