--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "flutter-stylizer",
+  "license": "SEE LICENSE IN LICENSE",
   "displayName": "flutter-stylizer",
   "description": "Flutter Stylizer organizes your Flutter classes in an opinionated and consistent manner.",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "publisher": "gmlewis-vscode",
   "repository": "https://github.com/gmlewis/flutter-stylizer",
   "engines": {
