--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "license": "SEE LICENSE IN LICENSE",
   "displayName": "flutter-stylizer",
   "description": "Flutter Stylizer organizes your Flutter classes in an opinionated and consistent manner.",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "publisher": "gmlewis-vscode",
   "repository": "https://github.com/gmlewis/flutter-stylizer",
   "engines": {
-    "vscode": "^1.28.0"
+    "vscode": "^1.43.0"
   },
   "categories": [
     "Other"
@@ -23,26 +23,51 @@
         "command": "extension.flutterStylizer",
         "title": "Flutter Stylizer"
       }
-    ]
+    ],
+    "configuration": {
+      "title": "Flutter Stylizer",
+      "properties": {
+        "flutterStylizer.memberOrdering": {
+          "type": "array",
+          "default": [
+            "public-constructor",
+            "named-constructors",
+            "public-static-variables",
+            "public-instance-variables",
+            "private-static-variables",
+            "private-instance-variables",
+            "public-override-methods",
+            "public-other-methods",
+            "build-method"
+          ],
+          "description": "Ordered list of members to control reordering of source code."
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
+    "lint": "eslint src --ext ts",
     "watch": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    "pretest": "npm run compile && npm run lint",
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^8.10.25",
+    "@types/glob": "^7.1.1",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.11.0",
     "@types/sinon": "^7.0.13",
+    "@types/vscode": "^1.43.0",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
+    "eslint": "^6.8.0",
+    "glob": "^7.1.6",
+    "mocha": "^7.1.1",
     "sinon": "^7.3.2",
-    "tslint": "^5.8.0",
-    "typescript": "^2.9.2",
-    "vscode": "^1.1.26"
-  },
-  "dependencies": {
-    "ts-node": "^7.0.1"
+    "tslint": "^5.18.0",
+    "typescript": "^3.8.3",
+    "vscode-test": "^1.3.0"
   },
   "extensionDependency": [
     "dart-code.dart-code"
