Switch to no semicolons

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
     "search.exclude": {
         "out": true
     },
-    "typescript.tsc.autoDetect": "off"
+    "typescript.tsc.autoDetect": "off",
+    "dart.analysisExcludedFolders": [
+      "**/test/**",
+      "**"
+    ]
 }
