--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "license": "SEE LICENSE IN LICENSE",
   "displayName": "flutter-stylizer",
   "description": "Flutter Stylizer organizes your Flutter classes in an opinionated and consistent manner.",
+  "icon": "images/flutter-stylizer-logo-128x128.png",
   "version": "0.1.2",
   "publisher": "gmlewis-vscode",
   "repository": "https://github.com/gmlewis/flutter-stylizer",
