--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint": "^7.32.0",
     "glob": "^7.2.0",
     "mocha": "^9.1.2",
+    "nanoid": ">=3.1.31",
     "sinon": "^11.1.2",
     "tslint": "^5.20.1",
     "typescript": "^4.4.3",
