--- a/package.json
+++ b/package.json
@@ -85,5 +85,8 @@
   },
   "extensionDependency": [
     "dart-code.dart-code"
-  ]
+  ],
+  "sponsor": {
+    "url": "https://github.com/sponsors/gmlewis"
+  }
 }
